[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "1"
path = "bin/1/main.rs"

[[bin]]
name = "1_2"
path = "bin/1_2/main.rs"

[[bin]]
name = "2"
path = "bin/2/main.rs"

[[bin]]
name = "2_2"
path = "bin/2_2/main.rs"

[dependencies]
